--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 }
 
 .wraper{
+    position: fixed;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -104,5 +105,8 @@
 }
 
 
-
-  
+@media(max-width :1100px) {
+    .wraper{
+        transform: scale(2.3);
+    }
+}
